# Rwasmtime

./: .Rbuildignore  .gitignore  AGENTS.md  DESCRIPTION  Makefile  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  configure  configure.win
.github/workflows/: pkgdown.yml  r-package.yml  webr.yml
R/: 000-wrappers.R  api.R
design/: STATUS.md  completion-audit.md  refinement-log.md
inst/: AUTHORS  LICENCE.note
inst/include/: rwasmtime.h
inst/tinytest/: helper-rwasmtime.R  test-app-callbacks.R  test-component-wit.R  test-config-pipes.R  test-low-level.R  test-memory-arrays.R  test-repl.R  test-rust-backend-aot.R  test-rust-backend-call.R  test-rust-backend-callbacks.R  test-rust-backend-exec.R  test-rust-backend-low-level.R  test-rust-backend-memory.R  test-rust-backend-repl.R  test-rust-backend-runtime.R  test-rust-backend-wasi.R
man/: Rwasmtime-api.Rd
src/: Makevars.rust.in  Makevars.wasm.in  Makevars.win.in  c_api.c  init.c  native_stubs.c  wasm_stubs.c
src/rust/: Cargo.toml  api.h
src/rust/src/: aot.rs  app.rs  arrays.rs  backend.rs  callbacks.rs  component.rs  config.rs  ffi.rs  lib.rs  limits.rs  repl.rs  runtime_objects.rs  wasi.rs
src/savvy/: Cargo.toml  api.h
src/savvy/src/: lib.rs
tests/: tinytest.R
tools/: check-api-surface.R  check-c-api-boundary.R  check-c-api-header.R  check-c-api-roundtrip.R  check-c-api-rust-backend.R  check-c-api-symbols.R  check-layout.sh  check-rust-core-boundary.R  check-webr-wasm-gate.R  update-authors.R
vignettes/: api-boundaries.Rmd  sandbox-repl-webr.Rmd
